--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "eu-west-2"
-  app: "docker"
-  env: "Docker-env"
-  bucket_name: "elasticbeanstalk-eu-west-2-840446354595"
+  region: "us-east-2"
+  app: "docker2"
+  env: "Docker2-env"
+  bucket_name: "elasticbeanstalk-us-east-2-840446354595"
   bucket_path: "docker"
   on:
     branch: master
